--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "handlebars": "^4.7.7",
     "parcel": "^2.8.3",
     "parcel-transformer-hbs": "^1.0.4"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1"
   }
 }
