--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "middle.messenger.praktikum.yandex",
-  "version": "1.0.0",
-  "description": "---",
-  "scripts": {
-    "dev": "parcel index.html",
-    "build": "parcel build index.html"
-  },
-  "devDependencies": {
-    "@parcel/resolver-glob": "^2.8.3",
-    "@parcel/transformer-sass": "^2.8.3",
-    "handlebars": "^4.7.7",
-    "parcel": "^2.8.3",
-    "parcel-transformer-hbs": "^1.0.4"
-  },
-  "dependencies": {
-    "normalize.css": "^8.0.1"
-  }
+	"name": "middle.messenger.praktikum.yandex",
+	"version": "1.0.0",
+	"description": "---",
+	"scripts": {
+		"dev": "parcel index.html",
+		"build": "parcel build index.html",
+		"start": "npm run build && node server.js"
+	},
+	"engines": {
+		"node": ">=12"
+	},
+	"devDependencies": {
+		"@parcel/resolver-glob": "^2.8.3",
+		"@parcel/transformer-sass": "^2.8.3",
+		"express": "^4.18.2",
+		"handlebars": "^4.7.7",
+		"parcel": "^2.8.3",
+		"parcel-transformer-hbs": "^1.0.4"
+	},
+	"dependencies": {
+		"normalize.css": "^8.0.1"
+	}
 }
