--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
 	"engines": {
 		"node": ">=12"
 	},
+	"targets": {
+		"default": {
+		  "engines": {
+				"browsers": ">= 50%"
+			}
+		}
+	},
 	"devDependencies": {
 		"@parcel/resolver-glob": "^2.8.3",
 		"@parcel/transformer-sass": "^2.8.3",
