--- a/netlify.toml
+++ b/netlify.toml
@@ -7,4 +7,10 @@
 
 [build]
   command = "npm run build"
-  publish = "dist" 
+  publish = "dist"
+
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
