--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	},
 	"targets": {
 		"default": {
-		  "engines": {
+			"engines": {
 				"browsers": ">= 50%"
 			}
 		}
@@ -20,10 +20,12 @@
 	"devDependencies": {
 		"@parcel/resolver-glob": "^2.8.3",
 		"@parcel/transformer-sass": "^2.8.3",
+		"eslint": "^8.39.0",
 		"express": "^4.18.2",
 		"handlebars": "^4.7.7",
 		"parcel": "^2.8.3",
-		"parcel-transformer-hbs": "^1.0.4"
+		"parcel-transformer-hbs": "^1.0.4",
+		"typescript": "^5.0.4"
 	},
 	"dependencies": {
 		"normalize.css": "^8.0.1"
