--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"typescript": "^5.0.4"
 	},
 	"dependencies": {
-		"normalize.css": "^8.0.1"
+		"normalize.css": "^8.0.1",
+		"uuid": "^9.0.0"
 	}
 }
