--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"description": "---",
 	"scripts": {
-		"dev": "parcel index.html",
+		"dev": "rimraf ./parcel-cache && parcel index.html --no-cache",
 		"build": "parcel build index.html",
 		"start": "npm run build && node server.js"
 	},
@@ -25,6 +25,8 @@
 		"handlebars": "^4.7.7",
 		"parcel": "^2.8.3",
 		"parcel-transformer-hbs": "^1.0.4",
+		"rimraf": "^5.0.1",
+		"stylelint": "^15.6.3",
 		"typescript": "^5.0.4"
 	},
 	"dependencies": {
