--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 	"scripts": {
 		"dev": "rimraf ./parcel-cache && parcel index.html --no-cache",
 		"build": "parcel build index.html",
-		"start": "npm run build && node server.ts"
+		"start": "npm run build && node server.ts",
+		"stylelint": "npx stylelint ./src/**/*.scss",
+		"lint": "npx eslint ./src/**/*.ts"
 	},
 	"engines": {
 		"node": ">=12"
@@ -20,7 +22,11 @@
 	"devDependencies": {
 		"@parcel/resolver-glob": "^2.8.3",
 		"@parcel/transformer-sass": "^2.8.3",
+		"@typescript-eslint/eslint-plugin": "^5.13.0",
+		"@typescript-eslint/parser": "^5.0.0",
 		"eslint": "^8.39.0",
+		"eslint-config-airbnb": "^19.0.4",
+		"eslint-config-airbnb-typescript": "^17.0.0",
 		"express": "^4.18.2",
 		"handlebars": "^4.7.7",
 		"parcel": "^2.8.3",
